# fastapi-render

./: main.py  pyproject.toml
