[tool.poetry]
name = "fastapi-render"
version = "0.1.0"
description = "An example API using FastAPI on Render"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
fastapi = {extras = ["all"], version = "^0.78.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
